<resources>
    <string name="app_name">洗浴转存机</string>
    <string name="app_company">成都先达卡智能科技有限公司研发</string>
    <!-- http -->
    <string name="str_loading">加载中……</string>
    <string name="str_no_net">没有网络连接</string>
    <string name="str_loading_wait">请稍候…</string>
    <string name="str_loading_logout">正在退出…</string>
    <string name="str_load_retry_btn">重新加载</string>
    <string name="str_dialog_apk_downloding_msg">正在下载客户端(%1$d %2$s)</string>
    <string name="str_load_retry_btn_refresh">刷新</string>
    <string name="str_load_retry_txt">获取数据失败</string>
    <!-- 转存状态-->
    <string name="str_trans_state1">卡放感应区</string>
    <string name="str_trans_state2">转存中，勿取卡！</string>
    <string name="str_trans_state3">成  功！</string>
    <string name="str_trans_state4">取卡过快！请重试！</string>
    <string name="str_trans_content1">1，请将卡放置在刷卡区域，等待成功提示后取走</string>
    <string name="str_trans_content2">2，刷卡一次转存%1$s元</string>
    <string name="str_trans_content4">4，转存后，在水控器刷卡出水，拔卡停水</string>
    <string name="str_trans_content3">3，一卡通可挂失，洗浴钱包不能挂失，请按需要转存</string>
    <string name="str_trans_content">使用说明</string>
    <string name="str_trans_msg">学生信息</string>

    <string name="str_trans_name">姓名：%1$s</string>
    <string name="str_trans_money">一卡通余额：<font color="red">%1$s</font>元</string>
    <string name="str_trans_wash_money">洗浴余额：<font color="red">%1$s</font>元</string>
</resources>