<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
       >
        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/main_dingbu"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/main_clean"
            android:visibility="gone"
            android:text="清空卡"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/main_title"
            android:layout_marginLeft="70dp"
            android:id="@+id/main_time"
            android:textSize="@dimen/main_second"
            android:gravity="bottom"
            android:layout_height="80dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:padding="35dp"
            android:background="@drawable/content_back"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/str_trans_content"
                android:textSize="@dimen/main_first"
                android:gravity="center"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/str_trans_content1"
                android:textSize="@dimen/main_second"
                android:layout_marginTop="@dimen/main_margin"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/str_trans_content2"
                android:textSize="@dimen/main_second"
                android:id="@+id/main_text_money"
                android:layout_marginTop="@dimen/main_margin"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/str_trans_content3"
                android:textSize="@dimen/main_second"
                android:layout_marginTop="@dimen/main_margin"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/str_trans_content4"
                android:textSize="@dimen/main_second"
                android:layout_marginTop="@dimen/main_margin"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="0.7"
               android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:padding="20dp"
                android:background="@drawable/content_back"
                android:orientation="vertical"
                android:layout_height="0dp">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/str_trans_msg"
                    android:textSize="@dimen/main_first"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/main_second"
                    android:layout_marginTop="@dimen/main_margin"
                    android:id="@+id/main_show_name"
                    android:layout_height="wrap_content" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:textSize="@dimen/main_second"
                       android:layout_marginTop="@dimen/main_margin"
                       android:textColor="@android:color/holo_red_dark"
                       android:id="@+id/main_show_wash_money"
                       android:layout_height="wrap_content" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:textSize="@dimen/main_second"
                       android:textColor="@android:color/holo_red_dark"
                       android:layout_marginTop="@dimen/main_margin"
                       android:id="@+id/main_show_money"
                       android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/content_back_state"
                android:gravity="center"
                android:layout_height="0dp">
                <ProgressBar
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/main_progress"
                    android:visibility="gone"
                    android:indeterminate="false"
                    android:indeterminateDrawable="@drawable/empty_loading_progress"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:padding="15dp"
                    android:id="@+id/main_show_state"
                    android:text="@string/str_trans_state1"
                    android:textSize="@dimen/main_most"
                    android:textColor="@android:color/holo_red_light"
                    android:textStyle="bold"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_company"
        android:gravity="center"
        android:layout_height="20dp" />
</LinearLayout>